fix: overflow banner

--- a/Pancake/Components/HeroSection/css/hero-section.scss
+++ b/Pancake/Components/HeroSection/css/hero-section.scss
@@ -31,6 +31,10 @@
   background: -webkit-linear-gradient(310.27deg, #e6fdff 0%, #f3efff 100%);
   background: linear-gradient(139.73deg, #e6fdff 0%, #f3efff 100%);
 
+  //Non so se funzionano con le altre parti
+  overflow: hidden;
+  position: relative;
+
   .hero-section-content {
     max-width: 1200px;
     width: 100%;
@@ -51,6 +55,9 @@
       height: 192px;
       border-radius: 32px;
       position: relative;
+      @include md-768px() {
+        overflow: hidden;
+      }
       //
       .hero-slideBar-content {
         display: flex;
@@ -176,15 +183,15 @@
           }
           @include md-768px() {
             bottom: -17px;
-            right: -11px;
+            right: 0px;
           }
 
           .hero-slideBar-img-bunny1 {
             width: 193px;
             height: 263px;
             @include md-768px() {
-              width: 115px;
-              height: 153px;
+              width: 103px;
+              height: 138px;
             }
           }
         }
@@ -203,7 +210,7 @@
     height: 175px;
   }
   @include md-768px() {
-    left: -12px;
+    left: 0px;
     bottom: 4px;
     height: 98px;
   }
@@ -213,15 +220,16 @@
   position: relative;
   left: 56px;
   top: -22px;
-  width: 373px !important;
-  height: 234px !important;
+  width: 373px;
+  height: 234px;
   @include bg-992px() {
     left: -14px;
     top: -22px;
   }
   @include md-768px() {
-    left: 105px;
+    left: 101px;
     top: -11px;
+    height: 236px;
   }
 }
 
@@ -290,5 +298,5 @@
   width: 100%;
 
   position: absolute;
-  bottom: -3px;
+  bottom: -6px;
 }
